--- a/navigation.css
+++ b/navigation.css
@@ -1,7 +1,11 @@
 body{
-    background-color: black;
+    background-color: #efefef;
     margin: 0;
     padding: 0;
+}
+*{
+    padding: 0;
+    margin: 0;
 }
 a{
     color: inherit;
@@ -36,14 +40,14 @@ nav>ul{
     display: block;
     clear: both;
 }
-.topNavBar>a{
+.topNavBarInner > a{
     float: left;
     font-family: 'Arial Black';
     font-size: 24px;
     padding-top: 8.4px;
     padding-bottom: 2px;
 }
-.topNavBar>nav{
+.topNavBar nav{
     float: right;
 }
 .topNavBar a .rs{
@@ -53,11 +57,98 @@ nav>ul{
     color: #9a9da2;
 }
 .topNavBar{
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    position: fixed;
+    width: 100%;
 }
-.topNavBar>a>span.rs{
+.topNavBar a span.rs{
     margin-right: 4px;
+}
+.banner{
+    background-image: url(./rs-cover.jpg);
+    height: 515px;
+}
+.topNavBarInner{
+    padding: 20px 16px;
+}
+.banner .mask{
+    height: 515px;
+    background-color: rgba(0, 0, 0, 0.8)
+}
+.userCard{
+    background-color: #ffffff;
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.userCard .hello{
+    background-color: #e6686a;
+    color: white;
+    display: inline-block;
+    padding: 5px 16px;
+    position: relative;
+}
+.userCard .hello .triangle{
+    display: block; 
+    /* 因为这里span里面放div */
+    border: 5px solid #e6686a;
+    width: 0px;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    position: absolute;
+    left: 5px;
+    top: 100%
+}
+.userCard .piture{
+    float: left;
+}
+.userCard .text{
+    float: left;
+    margin-left: 65px;
+    width: 470px;
+}
+.userCard .pitureAndText{
+    padding: 50px;
+}
+.text .hello{
+    margin-bottom: 31px;
+}
+.text hr{
+    height: 0;
+    border: none;
+    border-top: 1px solid #dedede;
+    margin: 20px 0;
+}
+.text dt, .text dd{
+    float: left;
+    padding: 5px 0;
+}
+.text dt{
+    width: 30%;
+    font-weight: bold;
+}
+.text dd{
+    width: 70%;
+    color: #9da0a7
+}
+.userCard .media{
+    background-color: #e6686a;
+    text-align: center;
+
+}
+.userCard .media svg{
+    height: 30px;
+    width: 30px;
+    fill: white;
+    vertical-align: top;
+}
+.media a{
+    display: inline-block;
+    border-radius: 50%;
+    width: 50px;
+    padding: 10px 0;
+    line-height: 30px;
+    margin: 16px 16px;
+}
+.media a:hover{
+    background: #cf5d5fcc
 }
