--- a/navigation.css
+++ b/navigation.css
@@ -20,12 +20,7 @@ nav>ul>li{
     margin-left: 17px;
     margin-right: 17px;
 }
-nav>ul>li>a{
-    border-top: 3px solid transparent;
-    border-bottom: 3px solid transparent;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    display: block;
+nav>ul>li>a{border-top: 3px solid transparent;border-bottom: 3px solid transparent;padding-top: 5px;padding-bottom: 5px;display: block;
 }
 nav>ul>li>a:hover{
     border-bottom: 3px solid #e06567;
